--- a/src/app/components/add/add.component.html
+++ b/src/app/components/add/add.component.html
@@ -3,11 +3,7 @@
     <ion-title>
       Add Expense
     </ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="dismissModal()">
-        <ion-icon name="close-circle"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -29,7 +25,16 @@
       </ion-select>
     </ion-item>
   </ion-card>
-  <ion-button (click)="logExpenseInput(amount, description, type)">
-    log expense
-  </ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-button expand="block" color="primary" (click)="addExpense(amount,description,type)">Add</ion-button>
+      </ion-col>
+
+      <ion-col>
+        <ion-button expand="block" color="danger" (click)="dismissModal()">Cancel</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
